--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>replit</title>
   <link href="../css/style.css" rel="stylesheet" type="text/css" />
 </head>
@@ -15,7 +15,7 @@
       <a href="impact.html">Impact</a>
       <a href="team.html">Our Team</a>
       <a href="past.html">Past Events</a>
-      <div style="background-image: url('https://scontent.xx.fbcdn.net/v/t1.15752-9/380979600_835987081399286_6921840820845369918_n.jpg?stp=dst-jpg_p403x403&_nc_cat=101&ccb=1-7&_nc_sid=aee45a&_nc_ohc=lJwPF3sMJIoAX9t7IMa&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdTMEsHuRi7ylg-NdX3yC5OTbxSx7FbxkBlQt9PBmnwYqQ&oe=65385D33'); height: 65px; width: 65px; background-size: cover; float: right;"></div>
+      <div style="background-image: url('../LOGO.png'); height: 65px; width: 65px; background-size: cover; float: right;"></div>
     </div>
   </nav>
   <div class="flex1">
