final version of project

--- a/html/impact.html
+++ b/html/impact.html
@@ -18,31 +18,34 @@
       <div style="background-image: url('../LOGO.png'); height: 65px; width: 65px; background-size: cover; float: right;"></div>
     </div>
   </nav>
+
   <div class="flex1">
+    <div  class= "img-transition" style="min-width: 180px; width: 74vw; height:295px; ">
+      <div  style="background-image: url('../group_picture.jpeg');width: 74vw; height:295px; background-size: contain; background-repeat: no-repeat; margin:7vh 0vw 0vh 19.5vh;"></div>
+    </div>
     <div>
-      <div style="padding-top: 6.5vh; text-align: center; font-size: 1.5em;">   <strong>A New Way to Fund Music</strong></div>
-      <div style="padding-top: 2vh; text-align: center; width: 320px;">Music4Change serves to support underfunded music programs by gathering musicians to perform in public. All donations received from performances will go strictly to music programs.
+      <div style=" text-align: center; font-size: 2.4em; padding-top:9vh; padding-right: 7vw;">   <strong>About Us</strong></div>
+      <div style="padding: 4vh 7vw 0vh 0vw; text-align: center; width: 520px; font-size: 1.2em;">Music4Change was founded by a group of passionate students at Troy High School after realizing their music program needed more funds to purchase sheet music, instructor salaries, repair damaged instruments, and participation fees in parades and festivals. 
+
+        Through busking, Music4Change hopes to solve the problem of underfunded music programs one performance at a time.
       </div>
     </div>
-
-    <div style="background-image: url('../group_picture.jpeg'); min-width: 180px; width: 38%; height:160px; background-size: contain; background-repeat: no-repeat; margin:5vh 0vw 0vh 2vw;"></div>
   </div>
 
-  <div style="background-image: url('../group_picture.jpeg'); min-width: 180px; width: 38%; height:160px; background-size: contain; background-repeat: no-repeat; margin:5vh 0vw 0vh 2vw;"></div>
-
-  <div class="flex1" style="float:right;">
-  <div>
-    <div style=" text-align: center; font-size: 1.5em;">   <strong>About Us</strong></div>
-    <div style="padding: 2vh 2vw 0vh 2vw; text-align: center; width: 350px;">Music4Change was founded by a group of passionate students at Troy High School after realizing their music program needed more funds to purchase sheet music, instructor salaries, repair damaged instruments, and participation fees in parades and festivals. 
-
-      Through busking, Music4Change hopes to solve the problem of underfunded music programs one performance at a time.
+    <div class="flex1">
+      <div>
+        <div style="padding-top: 11vh; padding-left: 19.5vh; text-align: center; font-size: 2.4em;">   <strong>A New Way to Fund Music</strong></div>
+        <div style="padding-top: 5vh; padding-left: 19.5vh;text-align: center; width: 440px; font-size:1.4em;">Music4Change serves to support underfunded music programs by gathering musicians to perform in public. All donations received from performances will go strictly to music programs.
+        </div>
+      </div>
+      
+      <div style="background-image: url('../group_picture.jpeg'); min-width: 180px; width: 76vw; height:310px; background-size: contain; background-repeat: no-repeat; margin:7vh 0vw 0vh 21vw;"></div>
     </div>
-  </div>
+  
+  
 
-
-
-
-  <script src="../js/impact.js"></script>
+  
+  <script src="../js/script.js"></script>
 
 </body>
 
