--- a/html/team.html
+++ b/html/team.html
@@ -11,7 +11,7 @@
 <body>
   <nav style="background-color: #DE2C2C; width: 100%; height: 65px;position:relative;">
     <div class="flex" style="color: white; font-size: 1.3em; top: 50%; left: 50%; position: absolute; transform: translate(-50%,-50%);">
-      <a href="index.html">Home</a>
+      <a href="../index.html">Home</a>
       <a href="impact.html">Impact</a>
       <a href="team.html">Our Team</a>
       <a href="past.html">Past Events</a>
@@ -19,7 +19,7 @@
     </div>
   </nav>
     <div class= "flex1">
-      <div style="background-color: gray; width: 150px; height: 150px; border-radius: 120px; margin:5vh 0vw 0vh 2vw"></div>
+      <div style="background-color: gray; width: 150px; height: 150px; border-radius: 210px; margin:5vh 0vw 0vh 2vw"></div>
       <div>
         <div style="margin:5vh 0vw 0vh 3vw; font-size: 1.4em;">Founder/President- Cindy Wang</div>
         <div style="margin:3vh 0vw 0vh 3vw;">list music accomplishments here:</div>
@@ -31,17 +31,51 @@
         <div style="margin:5vh 0vw 0vh 3vw; font-size: 1.4em;">Vice President- Marcus Ruzzi</div>
         <div style="margin:3vh 0vw 0vh 3vw;">list music accomplishments here:</div>
       </div>
-      <div style="background-color: gray; width: 150px; height: 150px; border-radius: 120px; margin:5vh 0vw 0vh 2vw"></div>
+      <div style="background-color: gray; width: 150px; height: 150px; border-radius: 210px; margin:5vh 0vw 0vh 2vw"></div>
       </div>
     </div>
+
     <div class= "flex1">
-      <div style="background-color: gray; width: 150px; height: 150px; border-radius: 120px; margin:5vh 0vw 0vh 2vw"></div>
+      <div style="background-color: gray; width: 150px; height: 150px; border-radius: 210px; margin:5vh 0vw 0vh 2vw"></div>
       <div>
         <div style="margin:5vh 0vw 0vh 3vw; font-size: 1.4em;">Secretary- Siya Lee</div>
         <div style="margin:3vh 0vw 0vh 3vw;">list music accomplishments here:</div>
       </div>
     </div>
+
+    <div class= "flex1" style="justify-content: flex-end;">
+      <div>
+        <div style="margin:5vh 0vw 0vh 3vw; font-size: 1.4em;">Treasure- Michael Liang</div>
+        <div style="margin:3vh 0vw 0vh 3vw;">list music accomplishments here:</div>
+      </div>
+      <div style="background-color: gray; width: 150px; height: 150px; border-radius: 210px; margin:5vh 0vw 0vh 2vw"></div>
+      </div>
+    </div>
+
+    <div class= "flex1">
+      <div style="background-color: gray; width: 150px; height: 150px; border-radius: 210px; margin:5vh 0vw 0vh 2vw"></div>
+      <div>
+        <div style="margin:5vh 0vw 0vh 3vw; font-size: 1.4em;">Marketing Director- Noah Gomez</div>
+        <div style="margin:3vh 0vw 0vh 3vw;">list music accomplishments here:</div>
+      </div>
+    </div>
+
+    <div class= "flex1" style="justify-content: flex-end;">
+      <div>
+        <div style="margin:5vh 0vw 0vh 3vw; font-size: 1.4em;">Co-Arts Manager- Lydia Wang</div>
+        <div style="margin:3vh 0vw 0vh 3vw;">list music accomplishments here:</div>
+      </div>
+      <div style="background-color: gray; width: 150px; height: 150px; border-radius: 210px; margin:5vh 0vw 0vh 2vw"></div>
+      </div>
+    </div>
     
+    <div class= "flex1">
+      <div style="background-color: gray; width: 150px; height: 150px; border-radius: 210px; margin:5vh 0vw 0vh 2vw"></div>
+      <div>
+        <div style="margin:5vh 0vw 0vh 3vw; font-size: 1.4em;">Co-Arts Manager- Joey Baltanado</div>
+        <div style="margin:3vh 0vw 0vh 3vw;">list music accomplishments here:</div>
+      </div>
+    </div>
 
   
   
